Configured Parllel execution